Add basic login route
