# src/routes/user.routes.js
@@ -1,7 +1,8 @@
 import { Router } from 'express';
 const router = Router();
-import { register } from '../controllers/user.controller.js';
+import { register, login } from '../controllers/user.controller.js';
 
 router.post('/register', register);
+router.post('/login', login);
 
 export default router;
